# djangorestframework-types

./: package.json  pyproject.toml  pyrightconfig.json
.github/workflows/: test.yml
coreapi-stubs/: compat.pyi
coreschema-stubs/: compat.pyi  schemas.pyi  utils.pyi
openapi_codec-stubs/: decode.pyi
rest_framework-stubs/: authentication.pyi  compat.pyi  decorators.pyi  documentation.pyi  exceptions.pyi  fields.pyi  filters.pyi  generics.pyi  metadata.pyi  mixins.pyi  negotiation.pyi  pagination.pyi  parsers.pyi  permissions.pyi  relations.pyi  renderers.pyi  request.pyi  response.pyi  reverse.pyi  routers.pyi  serializers.pyi  settings.pyi  test.pyi  throttling.pyi  urlpatterns.pyi  urls.pyi  validators.pyi  versioning.pyi  views.pyi  viewsets.pyi
rest_framework-stubs/authtoken/: views.pyi
rest_framework-stubs/schemas/: __init__.pyi  coreapi.pyi  generators.pyi  inspectors.pyi  openapi.pyi  views.pyi
rest_framework-stubs/templatetags/: rest_framework.pyi
rest_framework-stubs/utils/: breadcrumbs.pyi  field_mapping.pyi  formatting.pyi  html.pyi  model_meta.pyi  representation.pyi  serializer_helpers.pyi
rest_framework_swagger-stubs/: renderers.pyi  views.pyi
s/: lint
tests/: test_restframework.py
